# raytrace-rs

./: .gitignore  Cargo.toml  README.md  antialiasing.ppm  camera.ppm  camera_focus.ppm  cornell.ppm  cornell_boxes.ppm  cornell_smoke.ppm  cornell_translate_rotate.ppm  dielectric.ppm  diffuse.ppm  diffuse_hemispherical.ppm  diffuse_lambertian.ppm  earth.ppm  final2.ppm  metal.ppm  metal_fuzz.ppm  motion_blur.ppm  normal.ppm  ray.ppm  sphere.ppm  surfaces.ppm  test.ppm  texture.ppm
images/: cornell_glass.ppm  cornell_smoke.ppm  mixed_pdf.ppm  random_scene.ppm
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  instances.rs  main.rs  material.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  rect.rs  scenes.rs  sphere.rs  texture.rs  utility.rs  vec3.rs  volumes.rs
