[package]
name = "raytrace-rs"
version = "0.1.0"
authors = ["iobtl <tedmundhtl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5"
indicatif = { version = "0.16.2", features = ["rayon"] }
image = "0.23.14"
